--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+SANCTUM_STATEFUL_DOMAINS=
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
